# backend/api/openapi-schema.yml
@@ -63,6 +63,81 @@ paths:
           description: ''
       tags:
       - liquids
+    put:
+      operationId: updateLiquids
+      description: ''
+      parameters:
+      - name: id
+        in: path
+        required: true
+        description: A unique integer value identifying this liquids.
+        schema:
+          type: string
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Liquids'
+          application/x-www-form-urlencoded:
+            schema:
+              $ref: '#/components/schemas/Liquids'
+          multipart/form-data:
+            schema:
+              $ref: '#/components/schemas/Liquids'
+      responses:
+        '200':
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Liquids'
+          description: ''
+      tags:
+      - liquids
+    patch:
+      operationId: partialUpdateLiquids
+      description: ''
+      parameters:
+      - name: id
+        in: path
+        required: true
+        description: A unique integer value identifying this liquids.
+        schema:
+          type: string
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Liquids'
+          application/x-www-form-urlencoded:
+            schema:
+              $ref: '#/components/schemas/Liquids'
+          multipart/form-data:
+            schema:
+              $ref: '#/components/schemas/Liquids'
+      responses:
+        '200':
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Liquids'
+          description: ''
+      tags:
+      - liquids
+    delete:
+      operationId: destroyLiquids
+      description: ''
+      parameters:
+      - name: id
+        in: path
+        required: true
+        description: A unique integer value identifying this liquids.
+        schema:
+          type: string
+      responses:
+        '204':
+          description: ''
+      tags:
+      - liquids
   /zones/:
     get:
       operationId: listZones
@@ -120,6 +195,81 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Zones'
+          description: ''
+      tags:
+      - zones
+    put:
+      operationId: updateZones
+      description: ''
+      parameters:
+      - name: id
+        in: path
+        required: true
+        description: A unique integer value identifying this zones.
+        schema:
+          type: string
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Zones'
+          application/x-www-form-urlencoded:
+            schema:
+              $ref: '#/components/schemas/Zones'
+          multipart/form-data:
+            schema:
+              $ref: '#/components/schemas/Zones'
+      responses:
+        '200':
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Zones'
+          description: ''
+      tags:
+      - zones
+    patch:
+      operationId: partialUpdateZones
+      description: ''
+      parameters:
+      - name: id
+        in: path
+        required: true
+        description: A unique integer value identifying this zones.
+        schema:
+          type: string
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Zones'
+          application/x-www-form-urlencoded:
+            schema:
+              $ref: '#/components/schemas/Zones'
+          multipart/form-data:
+            schema:
+              $ref: '#/components/schemas/Zones'
+      responses:
+        '200':
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Zones'
+          description: ''
+      tags:
+      - zones
+    delete:
+      operationId: destroyZones
+      description: ''
+      parameters:
+      - name: id
+        in: path
+        required: true
+        description: A unique integer value identifying this zones.
+        schema:
+          type: string
+      responses:
+        '204':
           description: ''
       tags:
       - zones
@@ -183,6 +333,36 @@ paths:
           description: ''
       tags:
       - silos
+    patch:
+      operationId: partialUpdateSilos
+      description: ''
+      parameters:
+      - name: id
+        in: path
+        required: true
+        description: A unique integer value identifying this silos.
+        schema:
+          type: string
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Silos'
+          application/x-www-form-urlencoded:
+            schema:
+              $ref: '#/components/schemas/Silos'
+          multipart/form-data:
+            schema:
+              $ref: '#/components/schemas/Silos'
+      responses:
+        '200':
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Silos'
+          description: ''
+      tags:
+      - silos
   /silos/{id}/all_measurements/:
     get:
       operationId: allMeasurementsSilos
@@ -223,6 +403,66 @@ paths:
           description: ''
       tags:
       - silos
+  /actions/:
+    get:
+      operationId: listActions
+      description: ''
+      parameters: []
+      responses:
+        '200':
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Actions'
+          description: ''
+      tags:
+      - actions
+    post:
+      operationId: createActions
+      description: ''
+      parameters: []
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Actions'
+          application/x-www-form-urlencoded:
+            schema:
+              $ref: '#/components/schemas/Actions'
+          multipart/form-data:
+            schema:
+              $ref: '#/components/schemas/Actions'
+      responses:
+        '201':
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Actions'
+          description: ''
+      tags:
+      - actions
+  /actions/{id}/:
+    get:
+      operationId: retrieveActions
+      description: ''
+      parameters:
+      - name: id
+        in: path
+        required: true
+        description: A unique integer value identifying this actions.
+        schema:
+          type: string
+      responses:
+        '200':
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Actions'
+          description: ''
+      tags:
+      - actions
   /auth/:
     post:
       operationId: createAuthToken
@@ -312,7 +552,7 @@ components:
         id:
           type: integer
           readOnly: true
-        heigth:
+        height:
           type: number
         diameter:
           type: number
@@ -379,8 +619,27 @@ components:
           type: string
           readOnly: true
       required:
-      - heigth
+      - height
       - diameter
+    Actions:
+      type: object
+      properties:
+        id:
+          type: integer
+          readOnly: true
+        action:
+          type: string
+          maxLength: 255
+        description:
+          type: string
+          maxLength: 1024
+        time:
+          type: string
+          format: date-time
+      required:
+      - action
+      - description
+      - time
     AuthToken:
       type: object
       properties:
